estructura del HTML hecha

--- a/index.html
+++ b/index.html
@@ -4,8 +4,67 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page de Ejercicio</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="main-container">
+        <nav class="navbar">
+            <div class="logo">
+                <img src="Media/science-fiction-1828602_640.png" alt="logo con tres cohetes en ascensión">
+            </div>
+            <div class="header-links">
+                <ul class="links">
+                    <li>header link one</li>
+                    <li>header link two</li>
+                    <li>header link three</li>
+                </ul>
+            </div>
+        </nav>
+        <section class="title-container">
+            <div class="title-text">
+                <h1>This website es la hostia</h1>
+                <p>Texto que va debajo del título, diciendo lo cojonuda que es esta página</p>
+                <button>Sign up</button>
+            </div>
+            <div class="title-img">
+                <img src="Media/avion y coche.jpg" alt="avión y dos coches, antiguos">
+            </div>
+        </section>
+        <section class="random-info">
+            <h2>Some random information</h2>
+            <div class="random-container">
+                <div class="random-info-containers">
+                    <img src="" alt="nada">
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                <div class="random-info-containers">
+                    <img src="" alt="nada">
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                <div class="random-info-containers">
+                    <img src="" alt="nada">
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                <div class="random-info-containers">
+                    <img src="" alt="nada">
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+            </div>
+        </section>
+        <section class="inspiring-quote">
+            <p>THis is an inspiring quote, or a testimonial from a customer. Maybe it's just a filling up space, ar maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+            <p>-Thor, Good of Thunder</p>
+        </section>
+        <section class="call-to-action">
+            <div class="blue-container">
+                <h3>Call to action! It's time!</h3>
+                <p>Sing up for our product by clicking that button right over here! </p>
+                <button>Sign up</button>
+            </div>
+        </section>
+        <footer>
+            <p>Copyright &#169; The Odin Project 2021</p>
+        </footer>
+    </div>
 </body>
 </html>
