--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="main-container">
         <nav class="navbar">
             <div class="logo">
-                <img src="Media/science-fiction-1828602_640.png" alt="logo con tres cohetes en ascensión">
+                <p>Header Logo</p>
             </div>
             <div class="header-links">
                 <ul class="links">
@@ -23,7 +23,7 @@
         <section class="title-container">
             <div class="title-text">
                 <h1>This website es la hostia</h1>
-                <p>Texto que va debajo del título, diciendo lo cojonuda que es esta página</p>
+                <p>Texto que va debajo del título, diciendo lo cojonuda que es esta página, no se me ocurren más tonterías que escribir aquí.</p>
                 <button>Sign up</button>
             </div>
             <div class="title-img">
@@ -34,32 +34,36 @@
             <h2>Some random information</h2>
             <div class="random-container">
                 <div class="random-info-containers">
-                    <img src="" alt="nada">
+                    <img src="" alt="">
                     <p>this is some subtext under an illustration or image</p>
                 </div>
                 <div class="random-info-containers">
-                    <img src="" alt="nada">
+                    <img src="" alt="">
                     <p>this is some subtext under an illustration or image</p>
                 </div>
                 <div class="random-info-containers">
-                    <img src="" alt="nada">
+                    <img src="" alt="">
                     <p>this is some subtext under an illustration or image</p>
                 </div>
                 <div class="random-info-containers">
-                    <img src="" alt="nada">
+                    <img src="" alt="">
                     <p>this is some subtext under an illustration or image</p>
                 </div>
             </div>
         </section>
         <section class="inspiring-quote">
-            <p>THis is an inspiring quote, or a testimonial from a customer. Maybe it's just a filling up space, ar maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
-            <p>-Thor, Good of Thunder</p>
+            <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just a filling up space, ar maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+            <p class="firma">-Thor, Good of Thunder</p>
         </section>
         <section class="call-to-action">
             <div class="blue-container">
-                <h3>Call to action! It's time!</h3>
-                <p>Sing up for our product by clicking that button right over here! </p>
-                <button>Sign up</button>
+                <div class="blue-container-left">
+                    <h3>Call to action! It's time!</h3>
+                    <p>Sing up for our product by clicking that button right over here! </p>
+                </div>
+                <div class="blue-container-right">
+                    <button>Sign up</button>
+                </div>
             </div>
         </section>
         <footer>
