--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </div>
         </section>
         <section class="inspiring-quote">
-            <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just a filling up space, ar maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+            <p class="inspiring-text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just a filling up space, ar maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
             <p class="firma">-Thor, Good of Thunder</p>
         </section>
         <section class="call-to-action">
